force-app/main/default/objects/DC_Tenant_Subdivision__c/DC_Tenant_Subdivision__c.object-meta.xml
<CustomObject>
    <label>Tenant Subdivision</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenant Subdivisions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>