force-app/main/default/objects/DC_Tenant_Subdivision__c/fields/Design_Capacity_kW__c.field-meta.xml
<CustomField>
    <fullName>Design_Capacity_kW__c</fullName>
    <formula>Max_Capacity_tons__c  /  0.284345</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Capacity (kW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>