force-app/main/default/objects/DC_Tenant_Subdivision__c/fields/Max_Capacity_tons__c.field-meta.xml
<CustomField>
    <fullName>Max_Capacity_tons__c</fullName>
    <description>Total capacity of this Tenant Subdivision in tons of water.</description>
    <label>Max Capacity (tons)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>