force-app/main/default/objects/DC_Tenant_Subdivision__c/fields/Subdivision__c.field-meta.xml
<CustomField>
    <fullName>Subdivision__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The  Subdivision feeding this Tenant Subdivision.</description>
    <label>Subdivision</label>
    <referenceTo>DC_Subdivision__c</referenceTo>
    <relationshipLabel>Tenant Subdivisions</relationshipLabel>
    <relationshipName>Tenant_Subdivisions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>