force-app/main/default/objects/DC_Tenant_Subdivision__c/fields/Tenant_Suite__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Suite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Tenant Suite being fed by this Tenant Subdivision.</description>
    <label>Tenant Suite</label>
    <referenceTo>DC_Tenant_Suite__c</referenceTo>
    <relationshipLabel>Tenant Subdivisions</relationshipLabel>
    <relationshipName>Tenant_Subdivisions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>